@@ -1,3 +1,9 @@
+2015-06-29  Hidehisa Akiyama  <akky@users.sourceforge.jp>
+
+	* rcsc/coach/coach_world_model.cpp:
+	* rcsc/coach/coach_world_model.h:
+	- CoachWorldModelにlastSetPlayStartTime(),getSetPlayCount()を追加
+
 2014-07-20  Hidehisa Akiyama  <akky@users.sourceforge.jp>
 
 	* configure.ac:
